# spux

./: .gitignore  Cargo.toml  README.md
examples/basic-spinner/: Cargo.toml
examples/basic-spinner/src/: app.rs  main.rs
src/: errors.rs  lib.rs  pulsers.rs  spinners.rs  types.rs
src/pulsers/: circle.rs  diamond.rs  filled_circle.rs  filled_diamond.rs
src/spinners/: filled_square.rs  partial_circle.rs  square.rs  triangle.rs
